--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
 		<main style="border: 10px dashed black; padding: 10px;">
 			<h2>Number is Prime</h2>
 			<p>
-				<input type="number" id="prime-number" placeholder="Enter a number" />
+				<input type="number" id="prime-number" placeholder="Enter a number" value="11" />
 				<button onclick="isPrime()">Check</button>
 			</p>
 			<p id="prime-result">Check to see your result</p>
 
 			<h2>Word is Palindrome</h2>
 			<p>
-				<input type="text" id="palindrome-word" placeholder="Enter a word" />
+				<input type="text" id="palindrome-word" placeholder="Enter a word" value="radar" />
 				<button onclick="isPalindrome()">Check</button>
 			</p>
 			<p id="palindrome-result">Check to see your result</p>
 
 			<h2>Year is Leap Year</h2>
 			<p>
-				<input type="number" id="leap-year" placeholder="Enter a year" />
+				<input type="number" id="leap-year" placeholder="Enter a year" value="2020" />
 				<button onclick="isLeapYear()">Check</button>
 			</p>
 			<p id="leap-year-result">Check to see your result</p>
